setup: adds Pipfile + updates for translation
Signed-off-by: Pamfilos Fokianos <pamfilosf@gmail.com>

--- a/{{cookiecutter.github_repository_name}}/docker-compose.yml
+++ b/{{cookiecutter.github_repository_name}}/docker-compose.yml
@@ -3,6 +3,7 @@ version: '2'
 services:
   postgres:
     image: postgres:9.6
+    # image: mdillon/postgis
   web:
     restart: always
     environment:
